# boto_task_django

./: Makefile  manage.py  pyproject.toml  readme.md
boto_task_django/: asgi.py  settings.py  urls.py  wsgi.py
shortener/: models.py  serializers.py  tests.py  utils.py  views.py
shortener/migrations/: 0001_initial.py
